# pan-mcp-relay

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  .yamlfmt.yaml  ARCHITECTURE.md  GEMINI.md  README.md  pyproject.toml  requirements.in  requirements.txt  taskfile.yml
.ci/: taskfile.ci.yml
.ci/scripts/: copyright.py
aisecurity/: configuration.py  downstream_mcp_client.py  exceptions.py  pan_security_relay.py  security_scanner.py  servers_config.json
aisecurity/mcp_relay/: servers_config.json  tool_registry.py
config/: servers_config.json  servers_config_example.json
examples/: pan_security_relay_client.py  pan_security_relay_stdio_client.py
examples/config/: config-example.json  mcp-relay-config.yaml
examples/server/: sqlite_server.py  test_server.py  time_server.py
pan_aisecurity_mcp/mcp_relay/: constants.py  downstream_mcp_client.py  exceptions.py  pan_security_relay.py  security_scanner.py  tool.py  tool_registry.py
pan_aisecurity_mcp/mcp_server/: pan_security_server.py
src/mcp_relay/: configuration.py  constants.py  downstream_mcp_client.py  exceptions.py  pan_security_relay.py  security_scanner.py  tool.py  tool_registry.py
src/mcp_server/: pan_security_server.py
src/pan_aisecurity_mcp_relay/: __init__.py  configuration.py  constants.py  downstream_mcp_client.py  exceptions.py  main.py  pan_security_relay.py  security_scanner.py  (+3 more)
tests/: test_configuration.py  test_constants.py  test_downstream_mcp_client.py  test_exceptions.py  test_pan_security_relay.py  test_security_scanner.py  test_tool.py  test_tool_registry.py
(+16 files in other folders)
